--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -7,10 +7,10 @@
 <body>
     <div id="eform" >
 
-        <form action="" onsubmit="return validate()" method="GET">
+        <form action="/mailer" onsubmit="return validate()" method="GET">
     
             <label for="email" id="emaillabel">Email :</label><br>
-            <input type="email" name="email" id="usermail" placeholder="enter email address"><br>
+            <input type="email" name="email" id="email" placeholder="enter email address"><br>
             <label for="" id="error"></label><br><br>
             <button id="button">Sent Email </button>
         
